Added more to BIB file

--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -5,15 +5,30 @@
 %   DBWY<Year>_<Journal><Page>
 %
 
+In Press Articles
+
+
 @string{JCTC = "J. Chem. Theor. Comp."}
 
+
+
 @article{DBWY16_JCTC935,
-  author = {David Bruce Williams--Young and Franco Egidi and
-    Xiaosong Li},
+  author = {David Lingerfelt and David Bruce Williams--Young 
+    and Alessio Petrone and Xiaosong Li},
   title = {Direct Ab Initio (Meta-)Surface--Hopping Dynamics},
   journal = JCTC,
   volume = {12},
-  issue = {3},
+  number = {3},
   pages = {935--945},
   doi = {10.1021/acs.jctc.5b00697}
+}
+
+Accepted Manuscripts
+
+@article{DBWY16_Accepted1,
+  author = {David Bruce Williams--Young and Franco Egidi and
+    Xiaosong Li},
+  title = {Relativistic Particle--Particle Tamm--Dancoff Approximation},
+  journal = JCTC,
+  pages = {Just Accepted}
 }
