--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -8,7 +8,8 @@
 In Press Articles
 
 
-@string{JCTC = "J. Chem. Theor. Comp."}
+@string{ JCTC = "J. Chem. Theor. Comp."}
+@string{ JCPC = "J. Chem. Phys. Comm." }
 
 
 
@@ -30,5 +31,26 @@ Accepted Manuscripts
     Xiaosong Li},
   title = {Relativistic Particle--Particle Tamm--Dancoff Approximation},
   journal = JCTC,
+  year = 2016,
   pages = {Just Accepted}
+}
+
+Submitted Manuscripts
+@article{DBWY16_Submitted1,
+  author = {David B. Williams-Young and David B. Lingerfelt and Alessio Petrone
+    and Yang Yang and Weitao Yang and Xiaosong Li},
+  title = {Ab Initio Surface Hopping Dynamics within the Particle--Particle
+    Tamm--Dancoff Approximation},
+  journal = JCPC,
+  year = 2016,
+  pages = {Submitted}
+}
+
+@article{DBWY16_Submitted2,
+  author = {David Bruce Williams--Young and Joshua J. Goings and Xiaosong Li},
+  title = {Accelerating Real--Time Time--Dependent Density Functional Theory
+    with the Chebyshev Expansion of the Quantum Propagator},
+  journal = JCTC,
+  year = 2016,
+  pages = {Submitted}
 }
