--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -33,6 +33,7 @@ Accepted Manuscripts
   journal = JCTC,
   year = 2016,
   pages = {Just Accepted}
+  doi = {10.1021/acs.jctc.6b00833}
 }
 
 Submitted Manuscripts
