Added bits on Chebyshev paper

--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -33,7 +33,17 @@ Accepted Manuscripts
   journal = JCTC,
   year = 2016,
   pages = {Just Accepted}
-  doi = {10.1021/acs.jctc.6b00833}
+  howpublished = {10.1021/acs.jctc.6b00833}
+}
+
+@article{DBWY16_Accepted2,
+  author = {David Bruce Williams--Young and Joshua J. Goings and Xiaosong Li},
+  title = {Accelerating Real--Time Time--Dependent Density Functional Theory
+    with the Chebyshev Expansion of the Quantum Propagator},
+  journal = JCTC,
+  year = 2016,
+  pages = {Just Accepted}
+  howpublished = {10.1021/acs.jctc.6b00693}
 }
 
 Submitted Manuscripts
@@ -47,11 +57,3 @@ Submitted Manuscripts
   pages = {Submitted}
 }
 
-@article{DBWY16_Submitted2,
-  author = {David Bruce Williams--Young and Joshua J. Goings and Xiaosong Li},
-  title = {Accelerating Real--Time Time--Dependent Density Functional Theory
-    with the Chebyshev Expansion of the Quantum Propagator},
-  journal = JCTC,
-  year = 2016,
-  pages = {Submitted}
-}
