Updated bib file

--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -39,7 +39,7 @@ Accepted Manuscripts
 @article{DBWY16_Accepted2,
   author = {David Bruce Williams--Young and Joshua J. Goings and Xiaosong Li},
   title = {Accelerating Real--Time Time--Dependent Density Functional Theory
-    with the Chebyshev Expansion of the Quantum Propagator},
+    with a Non--Recursive Chebyshev Expansion of the Quantum Propagator},
   journal = JCTC,
   year = 2016,
   pages = {Just Accepted}
