--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -10,6 +10,7 @@ In Press Articles
 
 @string{ JCTC = "J. Chem. Theor. Comp."}
 @string{ JCPC = "J. Chem. Phys. Comm." }
+@string{ JPCL = "J. Phys. Chem. Lett." }
 
 
 
@@ -47,7 +48,18 @@ Accepted Manuscripts
 }
 
 Submitted Manuscripts
+
 @article{DBWY16_Submitted1,
+  author = {Alessio Petrone and David Lingerfelt and David Williams--Young
+    and Xiaosong Li},
+  title = {Ab Initio Transient Vibrational Spectral Analysis},
+  journal = JPCL,
+  year = 2016,
+  pages = {Submitted}
+}
+
+% On Hold
+@article{DBWY16_OH1,
   author = {David B. Williams-Young and David B. Lingerfelt and Alessio Petrone
     and Yang Yang and Weitao Yang and Xiaosong Li},
   title = {Ab Initio Surface Hopping Dynamics within the Particle--Particle
@@ -56,4 +68,3 @@ Submitted Manuscripts
   year = 2016,
   pages = {Submitted}
 }
-
