Published transiet IR

--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -32,7 +32,7 @@ Accepted Manuscripts
     Xiaosong Li},
   title = {Relativistic Particle--Particle Tamm--Dancoff Approximation},
   journal = JCTC,
-  year = 2016,
+  year = {2016},
   pages = {Just Accepted}
   howpublished = {10.1021/acs.jctc.6b00833}
 }
@@ -42,21 +42,22 @@ Accepted Manuscripts
   title = {Accelerating Real--Time Time--Dependent Density Functional Theory
     with a Non--Recursive Chebyshev Expansion of the Quantum Propagator},
   journal = JCTC,
-  year = 2016,
+  year = {2016},
   pages = {Just Accepted}
   howpublished = {10.1021/acs.jctc.6b00693}
 }
 
-Submitted Manuscripts
-
-@article{DBWY16_Submitted1,
+@article{DBWY16_Accepted3,
   author = {Alessio Petrone and David Lingerfelt and David Williams--Young
     and Xiaosong Li},
   title = {Ab Initio Transient Vibrational Spectral Analysis},
   journal = JPCL,
-  year = 2016,
-  pages = {Submitted}
+  year = {2016},
+  pages = {Just Accepted}
 }
+
+Submitted Manuscripts
+
 
 % On Hold
 @article{DBWY16_OH1,
