Updated CV and pubs list with page numbers

--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -27,33 +27,38 @@ In Press Articles
 
 Accepted Manuscripts
 
-@article{DBWY16_Accepted1,
+@article{DBWY16_JCTC5379,
   author = {David Bruce Williams--Young and Franco Egidi and
     Xiaosong Li},
   title = {Relativistic Particle--Particle Tamm--Dancoff Approximation},
   journal = JCTC,
   year = {2016},
-  pages = {Just Accepted}
+  volume = {12},
+  number = {11},
+  pages = {5379--5384},
   howpublished = {10.1021/acs.jctc.6b00833}
 }
 
-@article{DBWY16_Accepted2,
+@article{DBWY16_JCTC5333,
   author = {David Bruce Williams--Young and Joshua J. Goings and Xiaosong Li},
   title = {Accelerating Real--Time Time--Dependent Density Functional Theory
     with a Non--Recursive Chebyshev Expansion of the Quantum Propagator},
   journal = JCTC,
   year = {2016},
-  pages = {Just Accepted}
+  volume = {12},
+  number = {11},
+  pages = {5333--5338},
   howpublished = {10.1021/acs.jctc.6b00693}
 }
 
-@article{DBWY16_Accepted3,
+@article{DBWY16_JCPL4501,
   author = {Alessio Petrone and David Lingerfelt and David Williams--Young
     and Xiaosong Li},
   title = {Ab Initio Transient Vibrational Spectral Analysis},
   journal = JPCL,
   year = {2016},
-  pages = {Just Accepted}
+  volume = {7},
+  pages = {4501--4508}
 }
 
 Submitted Manuscripts
