Fixed tag in bibtex

--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -51,7 +51,7 @@ Accepted Manuscripts
   howpublished = {10.1021/acs.jctc.6b00693}
 }
 
-@article{DBWY16_JCPL4501,
+@article{DBWY16_JPCL4501,
   author = {Alessio Petrone and David Lingerfelt and David Williams--Young
     and Xiaosong Li},
   title = {Ab Initio Transient Vibrational Spectral Analysis},
