Added page numbers to Raman paper

--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -11,6 +11,7 @@ In Press Articles
 @string{ JCTC = "J. Chem. Theor. Comp."}
 @string{ JCPC = "J. Chem. Phys. Comm." }
 @string{ JPCL = "J. Phys. Chem. Lett." }
+@string{ JPCA = "J. Phys. Chem. A" }
 
 
 
@@ -59,6 +60,15 @@ Accepted Manuscripts
   year = {2016},
   volume = {7},
   pages = {4501--4508}
+}
+
+@article{DBWY17_JPCA3958,
+  author = {Alessio Petrone and David B. Williams--Young and David B. Lingerfelt
+    and Xiaosong Li},
+  title = {Ab Initio Transient Raman Analysis},
+  journal = JPCA,
+  year = {2017},
+  pages = {3958--3965}
 }
 
 Submitted Manuscripts
