Added pages to VPT2 paper

--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -71,6 +71,16 @@ Accepted Manuscripts
   pages = {3958--3965}
 }
 
+@article{DBWY17_JCTC2789,
+  author = {Franco Egidi and David B. Williams--Young and Alberto Baiardi and Julien Bloino and 
+    Giovanni Scalmani and Michael J. Frisch and Xiaosong Li and Vincenzo Barone},
+  title = {Effective Inclusion of MEchanical and Electrical Anharmonivity in Excited Electronic
+    States: VPT2--TDDFT Route},
+  journal = JCTC,
+  year = {2017},
+  pages = {2789--2803}
+}
+
 Submitted Manuscripts
 
 
