Added page numbers

--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -26,7 +26,6 @@ In Press Articles
   doi = {10.1021/acs.jctc.5b00697}
 }
 
-Accepted Manuscripts
 
 @article{DBWY16_JCTC5379,
   author = {David Bruce Williams--Young and Franco Egidi and
@@ -81,16 +80,23 @@ Accepted Manuscripts
   pages = {2789--2803}
 }
 
-Submitted Manuscripts
-
-
-% On Hold
-@article{DBWY16_OH1,
-  author = {David B. Williams-Young and David B. Lingerfelt and Alessio Petrone
-    and Yang Yang and Weitao Yang and Xiaosong Li},
-  title = {Ab Initio Surface Hopping Dynamics within the Particle--Particle
-    Tamm--Dancoff Approximation},
-  journal = JCPC,
-  year = 2016,
-  pages = {Submitted}
+@article{DBWY17_JCTC4950,
+  author = { Roel van Beeumen and David B. Williams--Young and Joesph Kasper and 
+    Chao Yang and Esmond Ng and Xiaosong Li },
+  title = {Model Order Reduction Algorithm for Estimating the Absorption Spectrum},
+  journal = JCTC,
+  year = {2017},
+  pages = {4950--4961}
 }
+
+@article{DBWY17_JPCA7937,
+  author = {Matthew S. Barclay† and Timothy J. Quincy and 
+    David B. Williams--Young and Marco Caricato and Christopher G. Elles},
+  title = {Accurate Assignments of Excited-State Resonance Raman Spectra: 
+    A Benchmark Study Combining Experiment and Theory},
+  journal = JPCA,
+  year = {2017},
+  pages = {7937--7946}
+}
+}
+
