Update to PHF paper

--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -98,5 +98,13 @@ In Press Articles
   year = {2017},
   pages = {7937--7946}
 }
-}
 
+@article{DBWY18_JCTC588,
+  author = {Patrick J. Lestrange and David B. Williams--Young and Alessio Petrone
+    and Carlos A. Jimenez--Hoyos and Xiaosong Li},
+  title = {Efficient Implementation of Variation after Projection Generalized 
+    Hartree--Fock},
+  journal = JCTC,
+  year = {2018},
+  pages = {588--596}
+}
