Updated Pubs + CV

--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -66,6 +66,8 @@ In Press Articles
     and Xiaosong Li},
   title = {Ab Initio Transient Raman Analysis},
   journal = JPCA,
+  volume = {121},
+  number = {20},
   year = {2017},
   pages = {3958--3965}
 }
@@ -77,6 +79,8 @@ In Press Articles
     States: VPT2--TDDFT Route},
   journal = JCTC,
   year = {2017},
+  volume = {13},
+  number = {6},
   pages = {2789--2803}
 }
 
@@ -86,6 +90,8 @@ In Press Articles
   title = {Model Order Reduction Algorithm for Estimating the Absorption Spectrum},
   journal = JCTC,
   year = {2017},
+  volume = {13},
+  number = {10},
   pages = {4950--4961}
 }
 
@@ -96,6 +102,8 @@ In Press Articles
     A Benchmark Study Combining Experiment and Theory},
   journal = JPCA,
   year = {2017},
+  volume = {121},
+  number = {41},
   pages = {7937--7946}
 }
 
@@ -106,5 +114,19 @@ In Press Articles
     Hartree--Fock},
   journal = JCTC,
   year = {2018},
+  volume = {14},
+  number = {2},
   pages = {588--596}
+}
+
+@article{DBWY18_JCTC2034,
+  author = {Joseph Kasper and David B. Williams--Young and Eugene Vecharynski
+    and Chao Yang and Xiaosong Li} ,
+  title = {A Well--Tempered Hybrid Method for Solving Challenging Time--Dependent
+    Density Functional Theory (TDDFT) Systems},
+  journal = JCTC,
+  year = {2018},
+  volume = {14},
+  number = {4},
+  pages = {2034--2041}
 }
