--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -12,6 +12,7 @@ In Press Articles
 @string{ JCPC = "J. Chem. Phys. Comm." }
 @string{ JPCL = "J. Phys. Chem. Lett." }
 @string{ JPCA = "J. Phys. Chem. A" }
+@string{ EPJB = "Eur. Phys. J. B" }
 
 
 
@@ -129,4 +130,16 @@ In Press Articles
   volume = {14},
   number = {4},
   pages = {2034--2041}
+}
+
+@article{DBWY18_EPJB169,
+  author = {Alessio Petrone and David B. Williams--Young and Shichao Sun and 
+    Torin F. Stetina and  Xiaosong Li} ,
+  title = {An Efficient Implementation of Two-Component Relativistic Density 
+    Functional Theory with Torque-Free Auxiliary Variables},
+  journal = EPJB,
+  year = {2018},
+  volume = {91},
+  number = {7},
+  pages = {169}
 }
