--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -143,3 +143,13 @@ In Press Articles
   number = {7},
   pages = {169}
 }
+
+@article{DBWY19_JCTC348,
+  author = { Shichao Sun and David B. Williams--Young and Torin F. Stetina and 
+    Xiaosong Li },
+  journal = JCTC,
+  year = {2019},
+  volume = {51},
+  number = {1},
+  pages ={348--356}
+}
