Updated BibTeX + minor changes in pubs

--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -10,117 +10,102 @@ In Press Articles
 
 @string{ JCTC = "J. Chem. Theor. Comp."}
 @string{ JCPC = "J. Chem. Phys. Comm." }
+@string{ JCP  = "J. Chem. Phys." }
 @string{ JPCL = "J. Phys. Chem. Lett." }
 @string{ JPCA = "J. Phys. Chem. A" }
 @string{ EPJB = "Eur. Phys. J. B" }
 
 
 
-@article{DBWY16_JCTC935,
-  author = {David Lingerfelt and David Bruce Williams--Young 
-    and Alessio Petrone and Xiaosong Li},
-  title = {Direct Ab Initio (Meta-)Surface--Hopping Dynamics},
-  journal = JCTC,
-  volume = {12},
-  number = {3},
-  pages = {935--945},
-  doi = {10.1021/acs.jctc.5b00697}
+
+
+
+
+%-- Submitted --%
+
+@misc{arXiv:1905.01381,
+  author = {David B. Williams-Young and Alessio Petrone and Shichao Sun and 
+            Torin F. Stetina and Patrick Lestrange and Chad E. Hoyer and 
+            Daniel R. Nascimento and Lauren Koulias and Andrew Wildman and 
+            Joseph Kasper and Joshua J. Goings and Feizhi Ding and 
+            A. Eugene DePrince III and Edward F. Valeev and Xiaosong Li},
+  title = {The {C}hronus {Q}uantum ({ChronusQ}) Software Package},
+  year = {2019},
+  eprint = {arXiv:1905.01381}
+}
+
+@misc{arXiv:1903.05575,
+  author = {David B. Williams-Young and Xiaosong Li},
+  title = {On the Efficacy and High-Performance Implementation of Quaternion Matrix Multiplication},
+  year = {2019},
+  eprint = {arXiv:1903.05575}
 }
 
 
-@article{DBWY16_JCTC5379,
-  author = {David Bruce Williams--Young and Franco Egidi and
+%-- 2019 --%
+
+@article{doi:10.1063/1.5092628,
+  author = {Chad E. Hoyer and David B. Williams--Young and Chen Huang and Xiaosong Li},
+  title = {Embedding Non-Collinear Two-Component Electronic Structure in a Collinear Quantum Environment},
+  journal = JCP,
+  volume = {150},
+  number = {17},
+  pages = {174114},
+  doi = {10.1063/1.5092628},
+  url = {https://doi.org/10.1063/1.5092628}
+}
+
+@article{doi:10.1021/acs.jctc.9b00172,
+  author = {Bo Peng and Roel {Van Beeumen} and David B. Williams--Young and
+    Karol Kowalski and Chao Yang},
+  title = {Approximate Green’s Function Coupled Cluster Method Employing Effective Dimension Reduction},
+  journal = JCTC,
+  eprint = {arXiv:1902.06016},
+  doi = {10.1021/acs.jctc.9b00172},
+  url = {https://doi.org/10.1021/acs.jctc.9b00172}
+}
+
+@article{doi:10.1021/acs.jctc.9b00095,
+  author = {Shichao Sun and David B. Williams--Young and Xiaosong Li},
+  title = {An Ab Initio Linear Response Method for Computing Magnetic Circular 
+    Dichroism Spectra with Non-Perturbative Treatment of Magnetic Field},
+  journal = JCTC,
+  year = {2019},
+  doi = {10.1021/acs.jctc.8b01140},
+  url = {https://doi.org/10.1021/acs.jctc.8b01140}
+}
+
+@article{doi:10.1021/acs.jctc.8b01140,
+  author = {Shichao Sun and David B. Williams--Young and Torin F. Stetina and 
     Xiaosong Li},
-  title = {Relativistic Particle--Particle Tamm--Dancoff Approximation},
+  title = {Generalized Hartree-Fock with a Non-perturbative Treatment of Strong Magnetic Fields: 
+    Application to Molecular Spin Phase Transitions}
   journal = JCTC,
-  year = {2016},
-  volume = {12},
-  number = {11},
-  pages = {5379--5384},
-  howpublished = {10.1021/acs.jctc.6b00833}
+  year = {2019},
+  volume = {51},
+  number = {1},
+  pages = {348--356},
+  doi = {10.1021/acs.jctc.8b01140},
+  url = {https://doi.org/10.1021/acs.jctc.8b01140}
 }
 
-@article{DBWY16_JCTC5333,
-  author = {David Bruce Williams--Young and Joshua J. Goings and Xiaosong Li},
-  title = {Accelerating Real--Time Time--Dependent Density Functional Theory
-    with a Non--Recursive Chebyshev Expansion of the Quantum Propagator},
-  journal = JCTC,
-  year = {2016},
-  volume = {12},
-  number = {11},
-  pages = {5333--5338},
-  howpublished = {10.1021/acs.jctc.6b00693}
-}
+%-- 2018 --%
 
-@article{DBWY16_JPCL4501,
-  author = {Alessio Petrone and David Lingerfelt and David Williams--Young
-    and Xiaosong Li},
-  title = {Ab Initio Transient Vibrational Spectral Analysis},
-  journal = JPCL,
-  year = {2016},
-  volume = {7},
-  pages = {4501--4508}
-}
-
-@article{DBWY17_JPCA3958,
-  author = {Alessio Petrone and David B. Williams--Young and David B. Lingerfelt
-    and Xiaosong Li},
-  title = {Ab Initio Transient Raman Analysis},
-  journal = JPCA,
-  volume = {121},
-  number = {20},
-  year = {2017},
-  pages = {3958--3965}
-}
-
-@article{DBWY17_JCTC2789,
-  author = {Franco Egidi and David B. Williams--Young and Alberto Baiardi and Julien Bloino and 
-    Giovanni Scalmani and Michael J. Frisch and Xiaosong Li and Vincenzo Barone},
-  title = {Effective Inclusion of MEchanical and Electrical Anharmonivity in Excited Electronic
-    States: VPT2--TDDFT Route},
-  journal = JCTC,
-  year = {2017},
-  volume = {13},
-  number = {6},
-  pages = {2789--2803}
-}
-
-@article{DBWY17_JCTC4950,
-  author = { Roel van Beeumen and David B. Williams--Young and Joesph Kasper and 
-    Chao Yang and Esmond Ng and Xiaosong Li },
-  title = {Model Order Reduction Algorithm for Estimating the Absorption Spectrum},
-  journal = JCTC,
-  year = {2017},
-  volume = {13},
-  number = {10},
-  pages = {4950--4961}
-}
-
-@article{DBWY17_JPCA7937,
-  author = {Matthew S. Barclay† and Timothy J. Quincy and 
-    David B. Williams--Young and Marco Caricato and Christopher G. Elles},
-  title = {Accurate Assignments of Excited-State Resonance Raman Spectra: 
-    A Benchmark Study Combining Experiment and Theory},
-  journal = JPCA,
-  year = {2017},
-  volume = {121},
-  number = {41},
-  pages = {7937--7946}
-}
-
-@article{DBWY18_JCTC588,
-  author = {Patrick J. Lestrange and David B. Williams--Young and Alessio Petrone
-    and Carlos A. Jimenez--Hoyos and Xiaosong Li},
-  title = {Efficient Implementation of Variation after Projection Generalized 
-    Hartree--Fock},
-  journal = JCTC,
+@article{doi:10.1140/epjb/e2018-90170-1,
+  author = {Alessio Petrone and David B. Williams--Young and Shichao Sun and 
+    Torin F. Stetina and Xiaosong Li} ,
+  title = {An Efficient Implementation of Two-Component Relativistic Density 
+    Functional Theory with Torque-Free Auxiliary Variables},
+  journal = EPJB,
   year = {2018},
-  volume = {14},
-  number = {2},
-  pages = {588--596}
+  volume = {91},
+  number = {7},
+  pages = {169},
+  doi = {10.1140/epjb/e2018-90170-1},
+  url = {https://doi.org/10.1140/epjb/e2018-90170-1}
 }
 
-@article{DBWY18_JCTC2034,
+@article{doi:10.1021/acs.jctc.8b00141,
   author = {Joseph Kasper and David B. Williams--Young and Eugene Vecharynski
     and Chao Yang and Xiaosong Li} ,
   title = {A Well--Tempered Hybrid Method for Solving Challenging Time--Dependent
@@ -129,27 +114,133 @@ In Press Articles
   year = {2018},
   volume = {14},
   number = {4},
-  pages = {2034--2041}
+  pages = {2034--2041},
+  doi = {10.1021/acs.jctc.8b00141},
+  url = {http://doi.org/10.1021/acs.jctc.8b00141}
 }
 
-@article{DBWY18_EPJB169,
-  author = {Alessio Petrone and David B. Williams--Young and Shichao Sun and 
-    Torin F. Stetina and  Xiaosong Li} ,
-  title = {An Efficient Implementation of Two-Component Relativistic Density 
-    Functional Theory with Torque-Free Auxiliary Variables},
-  journal = EPJB,
-  year = {2018},
-  volume = {91},
-  number = {7},
-  pages = {169}
-}
-
-@article{DBWY19_JCTC348,
-  author = { Shichao Sun and David B. Williams--Young and Torin F. Stetina and 
-    Xiaosong Li },
+@article{doi:10.1021/acs.jctc.7b00832,
+  author = {Patrick J. Lestrange and David B. Williams--Young and Alessio Petrone
+    and Carlos A. Jimenez--Hoyos and Xiaosong Li},
+  title = {Efficient Implementation of Variation after Projection Generalized 
+    Hartree--Fock},
   journal = JCTC,
-  year = {2019},
-  volume = {51},
-  number = {1},
-  pages ={348--356}
+  year = {2018},
+  volume = {14},
+  number = {2},
+  pages = {588--596},
+  doi = {10.1021/acs.jctc.7b00832},
+  url = {http://doi.org/10.1021/acs.jctc.7b00832}
+}
+
+
+
+
+%-- 2017 --%
+
+@article{doi:10.1021/acs.jpca.7b09467,
+  author = {Matthew S. Barclay† and Timothy J. Quincy and 
+    David B. Williams--Young and Marco Caricato and Christopher G. Elles},
+  title = {Accurate Assignments of Excited-State Resonance Raman Spectra: 
+    A Benchmark Study Combining Experiment and Theory},
+  journal = JPCA,
+  year = {2017},
+  volume = {121},
+  number = {41},
+  pages = {7937--7946},
+  doi = {10.1021/acs.jpca.7b09467},
+  url = {http://doi.org/10.1021/acs.jpca.7b09467}
+}
+
+@article{doi:10.1021/acs.jctc.7b00402,
+  author = {Roel {Van Beeumen} and David B. Williams--Young and Joesph Kasper and 
+    Chao Yang and Esmond Ng and Xiaosong Li },
+  title = {Model Order Reduction Algorithm for Estimating the Absorption Spectrum},
+  journal = JCTC,
+  year = {2017},
+  volume = {13},
+  number = {10},
+  pages = {4950--4961},
+  eprint = {arXiv:1704.05923},
+  doi = {10.1021/acs.jctc.7b00402},
+  url = {http://doi.org/10.1021/acs.jctc.7b00402}
+}
+
+@article{doi:10.1021/acs.jctc.7b00218,
+  author = {Franco Egidi and David B. Williams--Young and Alberto Baiardi and Julien Bloino and 
+    Giovanni Scalmani and Michael J. Frisch and Xiaosong Li and Vincenzo Barone},
+  title = {Effective Inclusion of MEchanical and Electrical Anharmonivity in Excited Electronic
+    States: VPT2--TDDFT Route},
+  journal = JCTC,
+  year = {2017},
+  volume = {13},
+  number = {6},
+  pages = {2789--2803},
+  doi = {10.1021/acs.jctc.7b00218},
+  url = {http://doi.org/10.1021/acs.jctc.7b00218}
+}
+
+@article{doi:10.1021/acs.jpca.7b02905,
+  author = {Alessio Petrone and David B. Williams--Young and David B. Lingerfelt
+    and Xiaosong Li},
+  title = {Ab Initio Transient Raman Analysis},
+  journal = JPCA,
+  volume = {121},
+  number = {20},
+  year = {2017},
+  pages = {3958--3965},
+  doi = {10.1021/acs.jpca.7b02905},
+  url = {http://doi.org/10.1021/acs.jpca.7b02905}
+}
+
+%-- 2016 --%
+
+@article{doi:10.1021/acs.jpclett.6b02292,
+  author = {Alessio Petrone and David Lingerfelt and David Williams--Young
+    and Xiaosong Li},
+  title = {Ab Initio Transient Vibrational Spectral Analysis},
+  journal = JPCL,
+  year = {2016},
+  volume = {7},
+  pages = {4501--4508},
+  doi = {10.1021/acs.jpclett.6b02292},
+  url = {http://doi.org/10.1021/acs.jpclett.6b02292}
+}
+
+@article{doi:10.1021/acs.jctc.6b00693,
+  author = {David Bruce Williams--Young and Joshua J. Goings and Xiaosong Li},
+  title = {Accelerating Real--Time Time--Dependent Density Functional Theory
+    with a Non--Recursive Chebyshev Expansion of the Quantum Propagator},
+  journal = JCTC,
+  year = {2016},
+  volume = {12},
+  number = {11},
+  pages = {5333--5338},
+  doi = {10.1021/acs.jctc.6b00693},
+  url = {https://doi.org/10.1021/acs.jctc.6b00693}
+}
+
+@article{doi:10.1021/acs.jctc.6b00833,
+  author = {David Bruce Williams--Young and Franco Egidi and
+    Xiaosong Li},
+  title = {Relativistic Particle--Particle Tamm--Dancoff Approximation},
+  journal = JCTC,
+  year = {2016},
+  volume = {12},
+  number = {11},
+  pages = {5379--5384},
+  doi = {10.1021/acs.jctc.6b00833},
+  url = {https://doi.org/10.1021/acs.jctc.6b00833}
+}
+
+@article{doi:10.1021/acs.jctc.5b00697,
+  author = {David Lingerfelt and David Bruce Williams--Young 
+    and Alessio Petrone and Xiaosong Li},
+  title = {Direct Ab Initio (Meta-)Surface--Hopping Dynamics},
+  journal = JCTC,
+  volume = {12},
+  number = {3},
+  pages = {935--945},
+  doi = {10.1021/acs.jctc.5b00697},
+  url = {https://doi.org/10.1021/acs.jctc.5b00697}
 }
