Added pages to a few papers

--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -60,6 +60,9 @@ In Press Articles
     Karol Kowalski and Chao Yang},
   title = {Approximate Green’s Function Coupled Cluster Method Employing Effective Dimension Reduction},
   journal = JCTC,
+  volume = {15},
+  number = {5},
+  pages = {3185--3196},
   eprint = {arXiv:1902.06016},
   doi = {10.1021/acs.jctc.9b00172},
   url = {https://doi.org/10.1021/acs.jctc.9b00172}
@@ -70,6 +73,9 @@ In Press Articles
   title = {An Ab Initio Linear Response Method for Computing Magnetic Circular 
     Dichroism Spectra with Non-Perturbative Treatment of Magnetic Field},
   journal = JCTC,
+  volume = {15},
+  number = {5},
+  pages = {3162--3169},
   year = {2019},
   doi = {10.1021/acs.jctc.8b01140},
   url = {https://doi.org/10.1021/acs.jctc.8b01140}
