Update CV + Bib

--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -1,8 +1,6 @@
 % 
 % A working bib file for my in-press manuscripts
 %
-% The cite keys will follow the naming convention:
-%   DBWY<Year>_<Journal><Page>
 %
 
 In Press Articles
@@ -21,28 +19,63 @@ In Press Articles
 
 
 
-%-- Submitted --%
+%-- 2019 --%
 
-@misc{arXiv:1905.01381,
-  author = {David B. Williams-Young and Alessio Petrone and Shichao Sun and 
-            Torin F. Stetina and Patrick Lestrange and Chad E. Hoyer and 
-            Daniel R. Nascimento and Lauren Koulias and Andrew Wildman and 
-            Joseph Kasper and Joshua J. Goings and Feizhi Ding and 
+@misc{doi:10.1002/wcms.1436,
+  author = {Williams-Young, David B and Petrone, Alessio and Sun, Shichao and 
+            Stetina, Torin F and Lestrange, Patrick and Hoyer, Chad E and 
+            Nascimento, Daniel R and Koulias, Lauren and Wildman, Andrew and 
+            Kasper, Joseph and Joshua J. Goings and Feizhi Ding and 
             A. Eugene DePrince III and Edward F. Valeev and Xiaosong Li},
-  title = {The {C}hronus {Q}uantum ({ChronusQ}) Software Package},
+  title = {The Chronus quantum software package},
+  journal = {Wiley Interdisciplinary Reviews: Computational Molecular Science},
+  volume = {10},
+  number = {2},
+  pages = {e1436},
   year = {2019},
+  doi = {10.1002/wcms.1436},
+  url = {https://doi.org/10.1002/wcms.1436},
   eprint = {arXiv:1905.01381}
 }
 
-@misc{arXiv:1903.05575,
-  author = {David B. Williams-Young and Xiaosong Li},
-  title = {On the Efficacy and High-Performance Implementation of Quaternion Matrix Multiplication},
+@article{doi:10.1021/acs.jctc.9b00729,
+  author = {Koulias, Lauren N. and Williams-Young, David B. and Nascimento, Daniel R. and 
+            DePrince, A. Eugene III and Li, Xiaosong},
+  title = {Relativistic Real-Time Time-Dependent Equation-of-Motion Coupled-Cluster},
+  journal = JCTC,
+  volume = {15},
+  number = {12},
+  pages = {6617-6624},
   year = {2019},
-  eprint = {arXiv:1903.05575}
+  doi = {10.1021/acs.jctc.9b00729},
+  URL = {https://doi.org/10.1021/acs.jctc.9b00729}
 }
 
 
-%-- 2019 --%
+@article{doi:10.1021/acs.jctc.9b00632,
+  author = {Sun, Shichao and Beck, Ryan A. and Williams-Young, David and Li, Xiaosong},
+  title = {Simulating Magnetic Circular Dichroism Spectra with Real-Time Time-Dependent 
+           Density Functional Theory in Gauge Including Atomic Orbitals},
+  journal = JCTC,
+  volume = {15},
+  number = {12},
+  pages = {6824-6831},
+  year = {2019},
+  doi = {10.1021/acs.jctc.9b00632},
+  URL = {https://doi.org/10.1021/acs.jctc.9b00632}
+}
+
+@article{doi:10.1002/cptc.201900161,
+  title = {Modeling magneto-Photoabsorption using time-dependent complex generalized Hartree-Fock},
+  author = {Stetina, Torin F and Sun, Shichao and Williams-Young, David B and Li, Xiaosong},
+  journal = {ChemPhotoChem},
+  volume = {3},
+  number = {9},
+  pages = {739--746},
+  year = {2019},
+  doi = {10.1002/cptc.201900161},
+  url = {https://doi.org/10.1002/cptc.201900161}
+}
 
 @article{doi:10.1063/1.5092628,
   author = {Chad E. Hoyer and David B. Williams--Young and Chen Huang and Xiaosong Li},
@@ -249,4 +282,14 @@ In Press Articles
   pages = {935--945},
   doi = {10.1021/acs.jctc.5b00697},
   url = {https://doi.org/10.1021/acs.jctc.5b00697}
+}
+
+
+%-- Old --%
+
+@misc{arXiv:1903.05575,
+  author = {David B. Williams-Young and Xiaosong Li},
+  title = {On the Efficacy and High-Performance Implementation of Quaternion Matrix Multiplication},
+  year = {2019},
+  eprint = {arXiv:1903.05575}
 }
